@@ -11,6 +11,7 @@
 <div id="test-hide-hidden" style="display:none;">hidden</div>
 <div id="test-show-visible">visible</div>
 <div id="test-show-hidden" style="display:none;">hidden</div>
+<div id="test-show-css-hidden">hidden</div>
 <div id="test-nested-hidden-visible" style="display:none;">
   <div id="test-nestee-hidden-visible">hidden</div>
 </div>
